--- a/index.html
+++ b/index.html
@@ -5,8 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 2 Landing Page: G3 Architects</title>
+    <style>
+        .container{
+            width: 1920px;
+            height: 1322px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .navig{
+            width: 1440px;
+            height: 60px;
+            /* TEMP COLOR-background */
+            display: flex;
+            justify-content: space-between;
+        }
+        .navig a{
+            text-decoration: none;
+        }
+    
+    </style>
+    <!-- style="display: flex;"  -->
 </head>
 <body>
-    
+    <!-- Section 1: Navig and Heading --> 
+    <div class="container" style="background-color: rgba(244, 144, 14, 0.1)">
+
+    <div class="navig" style="align-items: center;">
+        <span>
+            <h1 style="font-weight: bold; font-size: 45px;">G3 Architects</h1>
+        </span>
+        <span style="font-size: 20px; display: flex;">
+            <a style="padding-left: 55px;" href="">Home</a>
+            <a style="padding-left: 55px;" href="">About</a>
+            <a style="padding-left: 55px;" href="">Contact Us</a>
+            <a style="padding-left: 55px;" href="">Login</a>
+        </span>
+    </div>
+
+    <div style="width: 862px; height: 225; text-align: center; padding-top: 80px;">
+        <p style="font-weight: bold; font-size: 64px;">Brand New <br>Group of Architects</p>
+        <p style="font-size: 16px; margin-top: -30px; color: grey;">By dint of building well, you get to be a good architect. 
+        Beauty perishes in life, but is immortal in art. Architecture should speak of its time and place, 
+        but yearn for timelessness. form follows function," rather "form follows beauty"
+        </p>
+    </div>
+
+    <div style="padding-top: 20px; padding-bottom: 20px;">
+        <button style="width: 180px; height: 64px; background-color: rgb(255, 143, 14); color: white; font-weight: bold; font-size: 18px;">Explore More</button>
+    </div>
+
+    <div style="padding-top: 30px;">
+        <img src="images/banner.png" alt="Banner">
+    </div>
+    </div>
 </body>
 </html>
