--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         .container{
             width: 1920px;
-            height: 1322px;
+            /* height: 1322px; */
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -30,7 +30,7 @@
 <body>
 
     <!-- Section 1: Navig and Heading --> 
-    <div class="container" style="background-color: rgba(244, 144, 14, 0.1)">
+    <div class="container" style="height: 1322px; background-color: rgba(244, 144, 14, 0.1);">
 
         <div class="navig" style="align-items: center;">
             <span>
@@ -61,6 +61,27 @@
         </div>
 
     </div>
+
+        <!-- Section 2: Feature -->
+        <div class="container" style="height: 800px; background-color: darkgray; flex-direction: row; justify-content: center;">
+
+            <div style="display: grid; grid-template-columns: 342px 342px; grid-template-rows: 342px 342px; row-gap: 20px; column-gap:20px; border-radius: 8px; padding-right: 35px;">
+                <img src="images/team1.png" alt="team 1">
+                <img src="images/team2.png" alt="team 2">
+                <img src="images/team3.png" alt="team 3">
+                <img src="images/team4.png" alt="team 4">
+            </div>
+    
+            <div style="width: 537px; height: 304px; text-align: left; padding-left: 35px;">
+                <p style="font-weight: bold; font-size: 44px;"><span style="color:rgb(105, 105, 105)">Quick List</span> of Our <br> <span style="color: rgb(255, 143, 14)">Feature</span></p>
+                <p style="font-size: 16px; margin-top: -30px; color: grey;">By dint of building well, you get to be a good architect. 
+                Beauty perishes in life, but is immortal in art. Architecture should speak of its time and place, 
+                but yearn for timelessness. form follows function," rather "form follows beauty"
+                </p>
+                <button style="width: 180px; height: 64px; border-radius: 8px; background-color: rgb(255, 143, 14); color: white; font-weight: bold; font-size: 18px;">Explore More</button>
+            </div>
+    
+        </div>
 
 </body>
 </html>
