--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
         .navig a{
             text-decoration: none;
         }
-    
+        .shadows {
+            box-shadow: 0px 10px 7px -0.1px lightgrey;
+        }
+        /* Make a Special Div */
+        div.inline { 
+            float:left;
+        }
+
     </style>
     <!-- style="display: flex;"  -->
 </head>
@@ -63,7 +70,7 @@
     </div>
 
         <!-- Section 2: Feature -->
-        <div class="container" style="height: 800px; background-color: darkgray; flex-direction: row; justify-content: center;">
+        <div class="container" style="height: 800px; flex-direction: row; justify-content: center;">
 
             <div style="display: grid; grid-template-columns: 342px 342px; grid-template-rows: 342px 342px; row-gap: 20px; column-gap:20px; border-radius: 8px; padding-right: 35px;">
                 <img src="images/team1.png" alt="team 1">
@@ -81,6 +88,52 @@
                 <button style="width: 180px; height: 64px; border-radius: 8px; background-color: rgb(255, 143, 14); color: white; font-weight: bold; font-size: 18px;">Explore More</button>
             </div>
     
+        </div>
+
+        <!-- section 3: -->
+        <div class="container" style="height: 1059px; flex-direction: row; justify-content: center; padding-bottom: 50px;">
+
+            <div style="height: 1000px; display: grid; grid-template-columns: 585px; column-gap: 10px; padding-right: 75px;">
+
+                <div style="width: 537px; height: 200px; text-align: left; padding-left: 10px;">
+                    <div class="inline" style="background-color: coral; width: 4px; height: 105px; margin-top: 42px;"> </div>
+                    <p style="font-weight: bold; font-size: 44px; padding-left: 20px;">Feature You Will <br> love and Enjoy</p>
+                    <p style="font-size: 18px; margin-top: -30px; color: grey;">By dint of building well, you get to be a good architect. 
+                    Beauty perishes in life, but is immortal in art.
+                </p>
+                </div>
+                <div class="shadows" style="width: 587px; height: 172px; padding-left: 10px;">
+                    <h2>Version</h2>
+                    <p style="font-size: 16px; color: grey;">By dint of building well, you get to be a good architect. 
+                        Beauty perishes in life, but is immortal in art.
+                    </p>
+                </div>
+                <div class="shadows" style="width: 587px; height: 172px; padding-left: 10px;">
+                    <h2>Build</h2>
+                    <p style="font-size: 16px; color: grey;">By dint of building well, you get to be a good architect. 
+                        Beauty perishes in life, but is immortal in art.
+                    </p>
+                </div>
+                <div class="shadows" style="width: 587px; height: 172px; padding-left: 10px;">
+                    <h2>Design</h2>
+                    <p style="font-size: 16px; color: grey;">By dint of building well, you get to be a good architect. 
+                        Beauty perishes in life, but is immortal in art.
+                    </p>
+                </div>
+                <div class="shadows" style="width: 587px; height: 172px; padding-left: 10px;">
+                    <h2>Edit</h2>
+                    <p style="font-size: 16px; color: grey;">By dint of building well, you get to be a good architect. 
+                        Beauty perishes in life, but is immortal in art.
+                    </p>
+                </div>
+            </div>
+
+            <div style="padding-left: 75px;">
+                <div style="width: 708px; height: 982px; background-image: url(images/architect.png); overflow: visible;">
+                    <button style="width: 343px; height: 198px; border-radius: 8px; background-color: rgb(255, 143, 14); color: white; font-weight: bold; font-size: 18px; line-height: 14px; margin-left: -65px; margin-top: 860px;"><h1 style="color: azure;">10+ Years</h1><br>of experience</button>
+                </div>
+            </div>
+
         </div>
 
 </body>
